// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectCard /> Default story renders snapshot 1`] = `
<article
  class="card card--horizontal card--raised project-card"
  data-bootstrap-override="card"
>
  <header
    class="card__header project-card__header"
  >
    <span
      aria-label="Project 1"
      class="text text--sm text--neutral-medium number-icon number-icon--base number-icon--sm project-card__number"
      role="img"
    >
      1
    </span>
  </header>
  <div
    class="card__body project-card__body"
  >
    <h3
      class="heading heading--size-body-sm heading--neutral-strong project-card__title"
    >
      Project card title
    </h3>
  </div>
  <footer
    class="card__footer project-card__footer"
  >
    <div
      class="button-dropdown"
    >
      <button
        aria-expanded="false"
        aria-haspopup="menu"
        aria-label="Open project dropdown"
        class="clickable-style clickable-style--sm clickable-style--icon clickable-style--neutral button button--icon project-card__menu-button"
        data-bootstrap-override="clickable-style-icon"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="icon"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 20C11.45 20 10.9793 19.8043 10.588 19.413C10.196 19.021 10 18.55 10 18C10 17.45 10.196 16.979 10.588 16.587C10.9793 16.1957 11.45 16 12 16C12.55 16 13.021 16.1957 13.413 16.587C13.8043 16.979 14 17.45 14 18C14 18.55 13.8043 19.021 13.413 19.413C13.021 19.8043 12.55 20 12 20ZM12 14C11.45 14 10.9793 13.804 10.588 13.412C10.196 13.0207 10 12.55 10 12C10 11.45 10.196 10.979 10.588 10.587C10.9793 10.1957 11.45 10 12 10C12.55 10 13.021 10.1957 13.413 10.587C13.8043 10.979 14 11.45 14 12C14 12.55 13.8043 13.0207 13.413 13.412C13.021 13.804 12.55 14 12 14ZM12 8C11.45 8 10.9793 7.804 10.588 7.412C10.196 7.02067 10 6.55 10 6C10 5.45 10.196 4.97933 10.588 4.588C10.9793 4.196 11.45 4 12 4C12.55 4 13.021 4.196 13.413 4.588C13.8043 4.97933 14 5.45 14 6C14 6.55 13.8043 7.02067 13.413 7.412C13.021 7.804 12.55 8 12 8Z"
          />
        </svg>
      </button>
      <div
        class="dropdown-menu button-dropdown__dropdown-menu"
      >
        <ul
          class="dropdown-menu__list"
          role="menu"
        >
          <li
            class="dropdown-menu__item"
            role="menuitem"
          >
            <button
              class="dropdown-menu__link"
              tabindex="-1"
            >
              <svg
                aria-hidden="true"
                class="icon"
                fill="currentColor"
                height="1.25rem"
                style="--icon-size: 1.25rem;"
                viewBox="0 0 24 24"
                width="1.25rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm-.22-13h-.06c-.4 0-.72.32-.72.72v4.72c0 .35.18.68.49.86l4.15 2.49c.34.2.78.1.98-.24.21-.34.1-.79-.25-.99l-3.87-2.3V7.72c0-.4-.32-.72-.72-.72z"
                />
              </svg>
              Move to other section
            </button>
          </li>
          <li
            class="dropdown-menu__item"
            role="menuitem"
          >
            <button
              class="dropdown-menu__link"
              tabindex="-1"
            >
              <svg
                aria-hidden="true"
                class="icon"
                fill="currentColor"
                height="1.25rem"
                style="--icon-size: 1.25rem;"
                viewBox="0 0 24 24"
                width="1.25rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm-.22-13h-.06c-.4 0-.72.32-.72.72v4.72c0 .35.18.68.49.86l4.15 2.49c.34.2.78.1.98-.24.21-.34.1-.79-.25-.99l-3.87-2.3V7.72c0-.4-.32-.72-.72-.72z"
                />
              </svg>
              Move up
            </button>
          </li>
          <li
            class="dropdown-menu__item"
            role="menuitem"
          >
            <button
              class="dropdown-menu__link"
              tabindex="-1"
            >
              <svg
                aria-hidden="true"
                class="icon"
                fill="currentColor"
                height="1.25rem"
                style="--icon-size: 1.25rem;"
                viewBox="0 0 24 24"
                width="1.25rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm-.22-13h-.06c-.4 0-.72.32-.72.72v4.72c0 .35.18.68.49.86l4.15 2.49c.34.2.78.1.98-.24.21-.34.1-.79-.25-.99l-3.87-2.3V7.72c0-.4-.32-.72-.72-.72z"
                />
              </svg>
              Move down
            </button>
          </li>
          <li
            class="dropdown-menu__item"
            role="menuitem"
          >
            <button
              class="dropdown-menu__link"
              tabindex="-1"
            >
              <svg
                aria-hidden="true"
                class="icon"
                fill="currentColor"
                height="1.25rem"
                style="--icon-size: 1.25rem;"
                viewBox="0 0 24 24"
                width="1.25rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm-.22-13h-.06c-.4 0-.72.32-.72.72v4.72c0 .35.18.68.49.86l4.15 2.49c.34.2.78.1.98-.24.21-.34.1-.79-.25-.99l-3.87-2.3V7.72c0-.4-.32-.72-.72-.72z"
                />
              </svg>
              Move view details
            </button>
          </li>
        </ul>
      </div>
    </div>
  </footer>
</article>
`;

exports[`<ProjectCard /> Draggable story renders snapshot 1`] = `
<article
  class="card card--horizontal card--raised project-card project-card--draggable"
  data-bootstrap-override="card"
>
  <header
    class="card__header project-card__header"
  />
  <div
    class="card__body project-card__body"
  >
    <h3
      class="heading heading--size-body-sm heading--neutral-strong project-card__title"
    >
      DragDropItem provides handle to the left
    </h3>
  </div>
  <footer
    class="card__footer project-card__footer"
  >
    <div
      class="button-dropdown"
    >
      <button
        aria-expanded="false"
        aria-haspopup="menu"
        aria-label="Open project dropdown"
        class="clickable-style clickable-style--sm clickable-style--icon clickable-style--neutral button button--icon project-card__menu-button"
        data-bootstrap-override="clickable-style-icon"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="icon"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 20C11.45 20 10.9793 19.8043 10.588 19.413C10.196 19.021 10 18.55 10 18C10 17.45 10.196 16.979 10.588 16.587C10.9793 16.1957 11.45 16 12 16C12.55 16 13.021 16.1957 13.413 16.587C13.8043 16.979 14 17.45 14 18C14 18.55 13.8043 19.021 13.413 19.413C13.021 19.8043 12.55 20 12 20ZM12 14C11.45 14 10.9793 13.804 10.588 13.412C10.196 13.0207 10 12.55 10 12C10 11.45 10.196 10.979 10.588 10.587C10.9793 10.1957 11.45 10 12 10C12.55 10 13.021 10.1957 13.413 10.587C13.8043 10.979 14 11.45 14 12C14 12.55 13.8043 13.0207 13.413 13.412C13.021 13.804 12.55 14 12 14ZM12 8C11.45 8 10.9793 7.804 10.588 7.412C10.196 7.02067 10 6.55 10 6C10 5.45 10.196 4.97933 10.588 4.588C10.9793 4.196 11.45 4 12 4C12.55 4 13.021 4.196 13.413 4.588C13.8043 4.97933 14 5.45 14 6C14 6.55 13.8043 7.02067 13.413 7.412C13.021 7.804 12.55 8 12 8Z"
          />
        </svg>
      </button>
      <div
        class="dropdown-menu button-dropdown__dropdown-menu"
      >
        <ul
          class="dropdown-menu__list"
          role="menu"
        >
          <li
            class="dropdown-menu__item"
            role="menuitem"
          >
            <button
              class="dropdown-menu__link"
              tabindex="-1"
            >
              <svg
                aria-hidden="true"
                class="icon"
                fill="currentColor"
                height="1.25rem"
                style="--icon-size: 1.25rem;"
                viewBox="0 0 24 24"
                width="1.25rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm-.22-13h-.06c-.4 0-.72.32-.72.72v4.72c0 .35.18.68.49.86l4.15 2.49c.34.2.78.1.98-.24.21-.34.1-.79-.25-.99l-3.87-2.3V7.72c0-.4-.32-.72-.72-.72z"
                />
              </svg>
              Move to other section
            </button>
          </li>
          <li
            class="dropdown-menu__item"
            role="menuitem"
          >
            <button
              class="dropdown-menu__link"
              tabindex="-1"
            >
              <svg
                aria-hidden="true"
                class="icon"
                fill="currentColor"
                height="1.25rem"
                style="--icon-size: 1.25rem;"
                viewBox="0 0 24 24"
                width="1.25rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm-.22-13h-.06c-.4 0-.72.32-.72.72v4.72c0 .35.18.68.49.86l4.15 2.49c.34.2.78.1.98-.24.21-.34.1-.79-.25-.99l-3.87-2.3V7.72c0-.4-.32-.72-.72-.72z"
                />
              </svg>
              Move up
            </button>
          </li>
          <li
            class="dropdown-menu__item"
            role="menuitem"
          >
            <button
              class="dropdown-menu__link"
              tabindex="-1"
            >
              <svg
                aria-hidden="true"
                class="icon"
                fill="currentColor"
                height="1.25rem"
                style="--icon-size: 1.25rem;"
                viewBox="0 0 24 24"
                width="1.25rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm-.22-13h-.06c-.4 0-.72.32-.72.72v4.72c0 .35.18.68.49.86l4.15 2.49c.34.2.78.1.98-.24.21-.34.1-.79-.25-.99l-3.87-2.3V7.72c0-.4-.32-.72-.72-.72z"
                />
              </svg>
              Move down
            </button>
          </li>
          <li
            class="dropdown-menu__item"
            role="menuitem"
          >
            <button
              class="dropdown-menu__link"
              tabindex="-1"
            >
              <svg
                aria-hidden="true"
                class="icon"
                fill="currentColor"
                height="1.25rem"
                style="--icon-size: 1.25rem;"
                viewBox="0 0 24 24"
                width="1.25rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm-.22-13h-.06c-.4 0-.72.32-.72.72v4.72c0 .35.18.68.49.86l4.15 2.49c.34.2.78.1.98-.24.21-.34.1-.79-.25-.99l-3.87-2.3V7.72c0-.4-.32-.72-.72-.72z"
                />
              </svg>
              Move view details
            </button>
          </li>
        </ul>
      </div>
    </div>
  </footer>
</article>
`;

exports[`<ProjectCard /> WithMeta story renders snapshot 1`] = `
<article
  class="card card--horizontal card--raised project-card"
  data-bootstrap-override="card"
>
  <header
    class="card__header project-card__header"
  >
    <span
      aria-label="Project 1"
      class="text text--sm text--neutral-medium number-icon number-icon--base number-icon--sm project-card__number"
      role="img"
    >
      1
    </span>
  </header>
  <div
    class="card__body project-card__body"
  >
    <h3
      class="heading heading--size-body-sm heading--neutral-strong project-card__title"
    >
      Project card title
    </h3>
    <div
      class="project-card__meta"
    >
      12 days
    </div>
  </div>
  <footer
    class="card__footer project-card__footer"
  >
    <div
      class="button-dropdown"
    >
      <button
        aria-expanded="false"
        aria-haspopup="menu"
        aria-label="Open project dropdown"
        class="clickable-style clickable-style--sm clickable-style--icon clickable-style--neutral button button--icon project-card__menu-button"
        data-bootstrap-override="clickable-style-icon"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="icon"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 20C11.45 20 10.9793 19.8043 10.588 19.413C10.196 19.021 10 18.55 10 18C10 17.45 10.196 16.979 10.588 16.587C10.9793 16.1957 11.45 16 12 16C12.55 16 13.021 16.1957 13.413 16.587C13.8043 16.979 14 17.45 14 18C14 18.55 13.8043 19.021 13.413 19.413C13.021 19.8043 12.55 20 12 20ZM12 14C11.45 14 10.9793 13.804 10.588 13.412C10.196 13.0207 10 12.55 10 12C10 11.45 10.196 10.979 10.588 10.587C10.9793 10.1957 11.45 10 12 10C12.55 10 13.021 10.1957 13.413 10.587C13.8043 10.979 14 11.45 14 12C14 12.55 13.8043 13.0207 13.413 13.412C13.021 13.804 12.55 14 12 14ZM12 8C11.45 8 10.9793 7.804 10.588 7.412C10.196 7.02067 10 6.55 10 6C10 5.45 10.196 4.97933 10.588 4.588C10.9793 4.196 11.45 4 12 4C12.55 4 13.021 4.196 13.413 4.588C13.8043 4.97933 14 5.45 14 6C14 6.55 13.8043 7.02067 13.413 7.412C13.021 7.804 12.55 8 12 8Z"
          />
        </svg>
      </button>
      <div
        class="dropdown-menu button-dropdown__dropdown-menu"
      >
        <ul
          class="dropdown-menu__list"
          role="menu"
        >
          <li
            class="dropdown-menu__item"
            role="menuitem"
          >
            <button
              class="dropdown-menu__link"
              tabindex="-1"
            >
              <svg
                aria-hidden="true"
                class="icon"
                fill="currentColor"
                height="1.25rem"
                style="--icon-size: 1.25rem;"
                viewBox="0 0 24 24"
                width="1.25rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm-.22-13h-.06c-.4 0-.72.32-.72.72v4.72c0 .35.18.68.49.86l4.15 2.49c.34.2.78.1.98-.24.21-.34.1-.79-.25-.99l-3.87-2.3V7.72c0-.4-.32-.72-.72-.72z"
                />
              </svg>
              Move to other section
            </button>
          </li>
          <li
            class="dropdown-menu__item"
            role="menuitem"
          >
            <button
              class="dropdown-menu__link"
              tabindex="-1"
            >
              <svg
                aria-hidden="true"
                class="icon"
                fill="currentColor"
                height="1.25rem"
                style="--icon-size: 1.25rem;"
                viewBox="0 0 24 24"
                width="1.25rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm-.22-13h-.06c-.4 0-.72.32-.72.72v4.72c0 .35.18.68.49.86l4.15 2.49c.34.2.78.1.98-.24.21-.34.1-.79-.25-.99l-3.87-2.3V7.72c0-.4-.32-.72-.72-.72z"
                />
              </svg>
              Move up
            </button>
          </li>
          <li
            class="dropdown-menu__item"
            role="menuitem"
          >
            <button
              class="dropdown-menu__link"
              tabindex="-1"
            >
              <svg
                aria-hidden="true"
                class="icon"
                fill="currentColor"
                height="1.25rem"
                style="--icon-size: 1.25rem;"
                viewBox="0 0 24 24"
                width="1.25rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm-.22-13h-.06c-.4 0-.72.32-.72.72v4.72c0 .35.18.68.49.86l4.15 2.49c.34.2.78.1.98-.24.21-.34.1-.79-.25-.99l-3.87-2.3V7.72c0-.4-.32-.72-.72-.72z"
                />
              </svg>
              Move down
            </button>
          </li>
          <li
            class="dropdown-menu__item"
            role="menuitem"
          >
            <button
              class="dropdown-menu__link"
              tabindex="-1"
            >
              <svg
                aria-hidden="true"
                class="icon"
                fill="currentColor"
                height="1.25rem"
                style="--icon-size: 1.25rem;"
                viewBox="0 0 24 24"
                width="1.25rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm-.22-13h-.06c-.4 0-.72.32-.72.72v4.72c0 .35.18.68.49.86l4.15 2.49c.34.2.78.1.98-.24.21-.34.1-.79-.25-.99l-3.87-2.3V7.72c0-.4-.32-.72-.72-.72z"
                />
              </svg>
              Move view details
            </button>
          </li>
        </ul>
      </div>
    </div>
  </footer>
</article>
`;

exports[`<ProjectCard /> WithMetaIcon story renders snapshot 1`] = `
<article
  class="card card--horizontal card--raised project-card"
  data-bootstrap-override="card"
>
  <header
    class="card__header project-card__header"
  >
    <span
      aria-label="Project 1"
      class="text text--sm text--neutral-medium number-icon number-icon--base number-icon--sm project-card__number"
      role="img"
    >
      1
    </span>
  </header>
  <div
    class="card__body project-card__body"
  >
    <h3
      class="heading heading--size-body-sm heading--neutral-strong project-card__title"
    >
      Project card title
    </h3>
    <div
      class="project-card__meta"
    >
      <svg
        aria-hidden="true"
        class="icon project-card__meta-icon"
        fill="currentColor"
        height="0.875rem"
        style="--icon-size: 0.875rem;"
        viewBox="0 0 24 24"
        width="0.875rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 14V12H17V14H7ZM7 18V16H14V18H7ZM3 22V4H6V2H8V4H16V2H18V4H21V22H3ZM5 20H19V10H5V20Z"
        />
      </svg>
      12 days
    </div>
  </div>
  <footer
    class="card__footer project-card__footer"
  >
    <div
      class="button-dropdown"
    >
      <button
        aria-expanded="false"
        aria-haspopup="menu"
        aria-label="Open project dropdown"
        class="clickable-style clickable-style--sm clickable-style--icon clickable-style--neutral button button--icon project-card__menu-button"
        data-bootstrap-override="clickable-style-icon"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="icon"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 20C11.45 20 10.9793 19.8043 10.588 19.413C10.196 19.021 10 18.55 10 18C10 17.45 10.196 16.979 10.588 16.587C10.9793 16.1957 11.45 16 12 16C12.55 16 13.021 16.1957 13.413 16.587C13.8043 16.979 14 17.45 14 18C14 18.55 13.8043 19.021 13.413 19.413C13.021 19.8043 12.55 20 12 20ZM12 14C11.45 14 10.9793 13.804 10.588 13.412C10.196 13.0207 10 12.55 10 12C10 11.45 10.196 10.979 10.588 10.587C10.9793 10.1957 11.45 10 12 10C12.55 10 13.021 10.1957 13.413 10.587C13.8043 10.979 14 11.45 14 12C14 12.55 13.8043 13.0207 13.413 13.412C13.021 13.804 12.55 14 12 14ZM12 8C11.45 8 10.9793 7.804 10.588 7.412C10.196 7.02067 10 6.55 10 6C10 5.45 10.196 4.97933 10.588 4.588C10.9793 4.196 11.45 4 12 4C12.55 4 13.021 4.196 13.413 4.588C13.8043 4.97933 14 5.45 14 6C14 6.55 13.8043 7.02067 13.413 7.412C13.021 7.804 12.55 8 12 8Z"
          />
        </svg>
      </button>
      <div
        class="dropdown-menu button-dropdown__dropdown-menu"
      >
        <ul
          class="dropdown-menu__list"
          role="menu"
        >
          <li
            class="dropdown-menu__item"
            role="menuitem"
          >
            <button
              class="dropdown-menu__link"
              tabindex="-1"
            >
              <svg
                aria-hidden="true"
                class="icon"
                fill="currentColor"
                height="1.25rem"
                style="--icon-size: 1.25rem;"
                viewBox="0 0 24 24"
                width="1.25rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm-.22-13h-.06c-.4 0-.72.32-.72.72v4.72c0 .35.18.68.49.86l4.15 2.49c.34.2.78.1.98-.24.21-.34.1-.79-.25-.99l-3.87-2.3V7.72c0-.4-.32-.72-.72-.72z"
                />
              </svg>
              Move to other section
            </button>
          </li>
          <li
            class="dropdown-menu__item"
            role="menuitem"
          >
            <button
              class="dropdown-menu__link"
              tabindex="-1"
            >
              <svg
                aria-hidden="true"
                class="icon"
                fill="currentColor"
                height="1.25rem"
                style="--icon-size: 1.25rem;"
                viewBox="0 0 24 24"
                width="1.25rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm-.22-13h-.06c-.4 0-.72.32-.72.72v4.72c0 .35.18.68.49.86l4.15 2.49c.34.2.78.1.98-.24.21-.34.1-.79-.25-.99l-3.87-2.3V7.72c0-.4-.32-.72-.72-.72z"
                />
              </svg>
              Move up
            </button>
          </li>
          <li
            class="dropdown-menu__item"
            role="menuitem"
          >
            <button
              class="dropdown-menu__link"
              tabindex="-1"
            >
              <svg
                aria-hidden="true"
                class="icon"
                fill="currentColor"
                height="1.25rem"
                style="--icon-size: 1.25rem;"
                viewBox="0 0 24 24"
                width="1.25rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm-.22-13h-.06c-.4 0-.72.32-.72.72v4.72c0 .35.18.68.49.86l4.15 2.49c.34.2.78.1.98-.24.21-.34.1-.79-.25-.99l-3.87-2.3V7.72c0-.4-.32-.72-.72-.72z"
                />
              </svg>
              Move down
            </button>
          </li>
          <li
            class="dropdown-menu__item"
            role="menuitem"
          >
            <button
              class="dropdown-menu__link"
              tabindex="-1"
            >
              <svg
                aria-hidden="true"
                class="icon"
                fill="currentColor"
                height="1.25rem"
                style="--icon-size: 1.25rem;"
                viewBox="0 0 24 24"
                width="1.25rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm-.22-13h-.06c-.4 0-.72.32-.72.72v4.72c0 .35.18.68.49.86l4.15 2.49c.34.2.78.1.98-.24.21-.34.1-.79-.25-.99l-3.87-2.3V7.72c0-.4-.32-.72-.72-.72z"
                />
              </svg>
              Move view details
            </button>
          </li>
        </ul>
      </div>
    </div>
  </footer>
</article>
`;

exports[`<ProjectCard /> WithoutDropdown story renders snapshot 1`] = `
<article
  class="card card--horizontal card--raised project-card"
  data-bootstrap-override="card"
>
  <header
    class="card__header project-card__header"
  >
    <span
      aria-label="Project 1"
      class="text text--sm text--neutral-medium number-icon number-icon--base number-icon--sm project-card__number"
      role="img"
    >
      1
    </span>
  </header>
  <div
    class="card__body project-card__body"
  >
    <h3
      class="heading heading--size-body-sm heading--neutral-strong project-card__title"
    >
      DragDropItem provides handle to the left
    </h3>
  </div>
</article>
`;
